--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="./dist/build.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="//api.bitrix24.com/api/v1"></script>
+    <script src="./dist/app.js"></script>
   </body>
 </html>
