webpack config settiigs for best dist ))

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <div id="app"></div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="//api.bitrix24.com/api/v1"></script>
-    <script src="./dist/app.js"></script>
+    <script src="./dist/js/app.js"></script>
   </body>
 </html>
