--- a/install.html
+++ b/install.html
@@ -10,7 +10,7 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="//api.bitrix24.com/api/v1"></script>
-<script src="dist/install.js"></script>
+<script src="./dist/js/install.js"></script>
 
 </body>
 </html>
